# beautiful-spring

./: .gitignore
makurov_m_p/: CMakeLists.txt
makurov_m_p/Rational/: .build.bat
makurov_m_p/Rational/Rtnl_lib/: CMakeLists.txt  Rational.cpp  Rational.hpp
makurov_m_p/Rtnl_test/: CMakeLists.txt  rational_test.cpp
makurov_m_p/prj.cw/: CMakeLists.txt  CMakeSettings.json  Doxyfile
makurov_m_p/prj.cw/additional_worlds/: file_names.txt
makurov_m_p/prj.cw/additional_worlds/worlds/: cycle no progress with mutations  cycle progress  rewards check  rewards matter  stop moving
makurov_m_p/prj.cw/cell_world/: CMakeLists.txt  cell_world.cpp
makurov_m_p/prj.cw/include/: CMakeLists.txt
makurov_m_p/prj.cw/include/UI/: CMakeLists.txt  UI.cpp
makurov_m_p/prj.cw/include/UI/include/UI/: UI.h
makurov_m_p/prj.cw/include/creature/: creature.cpp
makurov_m_p/prj.cw/include/creature/include/creature/: creature.h
makurov_m_p/prj.cw/include/fonts/: CMakeLists.txt
makurov_m_p/prj.cw/include/save_system/: CMakeLists.txt  save_system.cpp
makurov_m_p/prj.cw/include/save_system/include/save_system/: save_system.h
makurov_m_p/prj.cw/include/scenario/: CMakeLists.txt  scenario.cpp
makurov_m_p/prj.cw/include/scenario/include/scenario/: scenario.h
makurov_m_p/prj.cw/objects/UI/: CMakeLists.txt  UI.cpp
makurov_m_p/prj.cw/objects/UI/include/UI/: UI.h
makurov_m_p/prj.cw/objects/creature/: CMakeLists.txt  creature.cpp
makurov_m_p/prj.cw/objects/creature/include/creature/: creature.h
makurov_m_p/prj.cw/objects/save_system/: save_system.cpp
makurov_m_p/prj.cw/objects/save_system/include/save_system/: save_system.h
makurov_m_p/prj.cw/objects/scenario/: CMakeLists.txt  scenario.cpp
makurov_m_p/prj.cw/objects/scenario/include/scenario/: scenario.h
makurov_m_p/prj.lab/: CMakeLists.txt
makurov_m_p/prj.lab/arrayd/: CMakeLists.txt
makurov_m_p/prj.lab/arrayd/include/arrayd/: arrayd.hpp
makurov_m_p/prj.lab/arrayt/: CMakeLists.txt
makurov_m_p/prj.lab/arrayt/include/arrayt/: arrayt.hpp
makurov_m_p/prj.lab/matrix/: CMakeLists.txt
makurov_m_p/prj.lab/matrix/include/matrix/: matrix.hpp
makurov_m_p/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
makurov_m_p/prj.lab/matrixs/include/matrixs/: matrixs.hpp
makurov_m_p/prj.lab/orto/: Geo2dOrto.cpp
makurov_m_p/prj.lab/rational/: CMakeLists.txt  rational.cpp
makurov_m_p/prj.lab/rational/include/rational/: rational.hpp
makurov_m_p/prj.test/: CMakeLists.txt  arrayd_test — копия.cpp  arrayd_test.cpp  arrayt_test.cpp  matrix_test.cpp  matrixs_test.cpp  rational_test.cpp
makurov_m_p/prj_lib/: CMakeLists.txt
makurov_m_p/prj_lib/ArrayD/: CMakeLists.txt
makurov_m_p/prj_lib/ArrayD/arrayD/: arrayD.hpp
makurov_m_p/prj_lib/Rational/: CMakeLists.txt  rational.cpp
makurov_m_p/prj_lib/Rational/rational/: rational.hpp
makurov_m_p/prj_test/: CMakeLists.txt
makurov_m_p/prj_test/ArrayD_test/: ArrayD_test.cpp  CMakeLists.txt
makurov_m_p/prj_test/Rtnl_test/: CMakeLists.txt  rational_test.cpp
prj.lab/arrayd/: CMakeLists.txt
prj.lab/rational/: CMakeLists.txt  rational.cpp
prj.lab/rational/include/rational/: rational.hpp
prj.test/: arrayd_test.cpp  rational_test.cpp
